--- a/src/texture.ui
+++ b/src/texture.ui
@@ -89,7 +89,7 @@
             <item>
              <widget class="QPushButton" name="btn_saveTexture">
               <property name="text">
-               <string>Save texture</string>
+               <string>Save</string>
               </property>
              </widget>
             </item>
