Ajout filtrage Nan, et IHM de filtrage, ajout ICP - reste probleme car pas encore de filtrage nan

--- a/src/registration.ui
+++ b/src/registration.ui
@@ -43,7 +43,7 @@
         <widget class="QComboBox" name="comboBox_Target"/>
        </item>
        <item row="0" column="1">
-        <widget class="QComboBox" name="comboBox_3">
+        <widget class="QComboBox" name="comboBox_TypeRegist">
          <item>
           <property name="text">
            <string>ICP</string>
